assets/style.scss
---
---

@import "{{ site.theme }}";
@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');

body {
  font-family: "Inria Sans";
  font-size: 12pt;
}

h1,h2,h3,h4,h5,h6  {
  font-family: "Inria Sans" !important;
  font-weight: bold !important;
}

h1 {
  font-size: 2em !important;
}

h2 {
  font-size: 1.5em !important;
  margin-block-end: .4em;
  margin-top: 1.5em;
}

h3 {
  font-size: 1.2em !important;
  margin-block-end: .4em;
  margin-top: .3em;
}

h4 {
  font-size: 1.1em !important;
  margin-top: .3em;
  margin-block-end: .4em;
}

h5 {
  font-size: 1em !important;
}

h6 {
  font-size: 1em !important;
  font-style: italic;
}


.page__subtitle {
  font-size: 1.5em;
  font-weight: 500;
  font-style: italic;
}

.slug {
  font-family: "Inria Sans";
  font-weight: 200;
  color: gray !important;
}

ul.toc {
  list-style-type: none;
  padding: 0;
  margin-left: 10pt;
}

div.bibtex-code {
  margin-top: 1em;
}

header.post-header {
  margin-bottom: 1em !important;
}

header.inline {
  float: left;
  display: inline;
  margin-right: 1ex;
}

header.inline .numbering {
  font-weight: bold;
}

